# scm-bot

./: Cargo.toml  Dockerfile  LICENSE  README.MD  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs
src/entity/: identity.rs
src/utils/: identity.rs  poi.rs  posts.rs  redis.rs
