[package]
name = "scm-bot"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0"
redis = { version = "1.0.2", features = ["tokio-comp"] }
futures = "0.3.31"
openai-api-rs = "9.0.1"
